--- a/utilities.css
+++ b/utilities.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: p22;
-    src: url("Assets/Fonts/Heading/ Font.otf")
+    src: url("Assets/Fonts/Heading Font.otf")
 }
 
 * {
