--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ body {
     display: flex;
     align-items: start;
     justify-content: center;
-    padding: var(--side-padding) 10vw;
+    padding: 10vw;
     margin-top: 75px;
     color: var(--light);
     text-align: center;
