--- a/index.css
+++ b/index.css
@@ -12,6 +12,16 @@ body {
     text-align: center;
 }
 
+.hero-bg.hero-bg{
+    background: url("./Assets/Images/bg.svg");
+    height: 100vh;
+    width: 100%;
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+}
+
 .button-group {
     margin-top: var(--fz-52);
     display: flex;
@@ -188,6 +198,11 @@ h2 {
 .overlay.fade {
     -webkit-mask-image: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 1)), to(rgba(0, 0, 0, 0)));
     mask-image: linear-gradient(0deg, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+}
+
+.noise-image{
+    background-image: url("http://assets.iceable.com/img/noise-transparent.png");
+    background-size: 600px;
 }
 
 h1.watermark {
